fix(css): aligns images to embed width

--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -30,7 +30,7 @@ img
 	display: block
 	margin-left: auto
 	margin-right: auto
-	max-width: 70%
+	max-width: 750px
 
 // main heading
 h1
